sys/lv2/mod-license/libmodla.h


/**
 * NOTE: You need to store a local 'uint32_t run_count' variable on your plugin,
 *       initialized with value 0.
 */

/** Check license file for a specific uri (plugin or collection).
 *
 * Must be called at instantiate(), one time for each license uri.
 *
 * Returns true if a valid license was found or host doesn't support licensing API.
 * (so that you can stop checking for other license uris)
 */
bool mod_license_check(const LV2_Feature* const* features, const char* license_uri);


/** Begin time calculations for unlicensed silence.
 *
 * Must be called at the beginning of each run().
 * This counts samples (time) to later decide if silence needs to be injected.
 *
 * Returned value must be stored in the local 'run_count'.
 */
uint32_t mod_license_run_begin(uint32_t run_count, uint32_t n_samples);


/** DEPRECATED
 * 
 * Before version 1.2 we used noise. We changed it, because even noise
 * at low levels can grow to maximum level through the signal
 * chain. This may damage speakers and hearing.
 *
 * We keep the function signature to not break compilation, since
 * programmers happen to fork e.g. old versions of DPF which make use
 * of `mod_license_run_noise`.
 */
void mod_license_run_noise(uint32_t run_count, float* buf, uint32_t n_samples, uint32_t chn)
  __attribute__ ((deprecated));

  
/** Inject silence into output buffers if unlicensed.
 *
 * Must be called at the end of each run(), for all audio output buffers.
 * Call this function on each buffer, using @a chn to specify the index offset.
 */
void mod_license_run_silence(uint32_t run_count, float* buf, uint32_t n_samples, uint32_t chn);


/** Get the LV2 interface for the MOD license API.
 *
 * Must be called at the end of your lv2 plugin extension_data.
 */
const void* mod_license_interface(const char* uri);


/** Return the version of modla library.
 *
 */
const char* mod_license_version(void);