sys/src/linux/x86_64.rs

#[doc = "MOD License Interface.\n\nWhen the plugin's extension_data is called with argument\nMOD_LICENSE__interface, the plugin MUST return an MOD_License_Interface\nstructure, which remains valid for the lifetime of the plugin.\n\nThe host can use the contained function pointers to query information about\na plugin's license. This can be used by the host to provide information to\nthe GUI (e.g. display name of licensee)."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _MOD_License_Interface {
    #[doc = "Get the current license status for a plugin instance.\n\n@see MOD_License_Status\n\n@param instance The LV2 instance this is a method on."]
    pub status:
        ::std::option::Option<unsafe extern "C" fn(instance: LV2_Handle) -> ::std::os::raw::c_int>,
    #[doc = "Get the name of the licensee for a plugin instance.\nThe caller is responsible for freeing the returned value with free().\n\n@param instance The LV2 instance this is a method on."]
    pub licensee: ::std::option::Option<
        unsafe extern "C" fn(instance: LV2_Handle) -> *mut ::std::os::raw::c_char,
    >,
}
#[doc = "MOD License Interface.\n\nWhen the plugin's extension_data is called with argument\nMOD_LICENSE__interface, the plugin MUST return an MOD_License_Interface\nstructure, which remains valid for the lifetime of the plugin.\n\nThe host can use the contained function pointers to query information about\na plugin's license. This can be used by the host to provide information to\nthe GUI (e.g. display name of licensee)."]
pub type MOD_License_Interface = _MOD_License_Interface;
#[doc = "Opaque pointer to host data for MOD_License_Feature."]
pub type MOD_License_Handle = *mut ::std::os::raw::c_void;
#[doc = "MOD License Feature (MOD_LICENSE__feature)"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _MOD_License_Feature {
    #[doc = "Opaque pointer to host data.\n\nThis MUST be passed to license() and free() whenever they are called.\nOtherwise, it must not be interpreted in any way."]
    pub handle: MOD_License_Handle,
    #[doc = "Ask the host about a license file for a specific uri\n(can be the plugin uri or a collection).\n\nThe host will return the contents of the file, signed and encrypted,\nor NULL if no license exists.\n\nThe plugin must call free() on the returned data.\n\n@param handle Must be the handle member of this struct.\n@param license_uri The uri for which to ask a license for."]
    pub license: ::std::option::Option<
        unsafe extern "C" fn(
            handle: MOD_License_Handle,
            license_uri: *const ::std::os::raw::c_char,
        ) -> *mut ::std::os::raw::c_char,
    >,
    #[doc = "Free the returned data of a license() call.\n\n@param license The data to be freed."]
    pub free: ::std::option::Option<
        unsafe extern "C" fn(handle: MOD_License_Handle, license: *mut ::std::os::raw::c_char),
    >,
}
#[doc = "MOD License Feature (MOD_LICENSE__feature)"]
pub type MOD_License_Feature = _MOD_License_Feature;
unsafe extern "C" {
    #[doc = " Check license file for a specific uri (plugin or collection).\n\n Must be called at instantiate(), one time for each license uri.\n\n Returns true if a valid license was found or host doesn't support licensing API.\n (so that you can stop checking for other license uris)"]
    pub fn mod_license_check(
        features: *const *const LV2_Feature,
        license_uri: *const ::std::os::raw::c_char,
    ) -> bool;
}
unsafe extern "C" {
    #[doc = " Begin time calculations for unlicensed silence.\n\n Must be called at the beginning of each run().\n This counts samples (time) to later decide if silence needs to be injected.\n\n Returned value must be stored in the local 'run_count'."]
    pub fn mod_license_run_begin(run_count: u32, n_samples: u32) -> u32;
}
unsafe extern "C" {
    #[doc = " DEPRECATED\n\n Before version 1.2 we used noise. We changed it, because even noise\n at low levels can grow to maximum level through the signal\n chain. This may damage speakers and hearing.\n\n We keep the function signature to not break compilation, since\n programmers happen to fork e.g. old versions of DPF which make use\n of `mod_license_run_noise`."]
    pub fn mod_license_run_noise(run_count: u32, buf: *mut f32, n_samples: u32, chn: u32);
}
unsafe extern "C" {
    #[doc = " Inject silence into output buffers if unlicensed.\n\n Must be called at the end of each run(), for all audio output buffers.\n Call this function on each buffer, using @a chn to specify the index offset."]
    pub fn mod_license_run_silence(run_count: u32, buf: *mut f32, n_samples: u32, chn: u32);
}
unsafe extern "C" {
    #[doc = " Get the LV2 interface for the MOD license API.\n\n Must be called at the end of your lv2 plugin extension_data."]
    pub fn mod_license_interface(
        uri: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_void;
}
unsafe extern "C" {
    #[doc = " Return the version of modla library.\n"]
    pub fn mod_license_version() -> *const ::std::os::raw::c_char;
}
#[doc = "This option applies to the instance itself.  The subject must be\nignored."]
pub const LV2_Options_Context_LV2_OPTIONS_INSTANCE: LV2_Options_Context = 0;
#[doc = "This option applies to some named resource.  The subject is a URI mapped\nto an integer (a LV2_URID, like the key)"]
pub const LV2_Options_Context_LV2_OPTIONS_RESOURCE: LV2_Options_Context = 1;
#[doc = "This option applies to some blank node.  The subject is a blank node\nidentifier, which is valid only within the current local scope."]
pub const LV2_Options_Context_LV2_OPTIONS_BLANK: LV2_Options_Context = 2;
#[doc = "This option applies to a port on the instance.  The subject is the\nport's index."]
pub const LV2_Options_Context_LV2_OPTIONS_PORT: LV2_Options_Context = 3;
#[doc = "The context of an Option, which defines the subject it applies to."]
pub type LV2_Options_Context = ::std::os::raw::c_uint;
#[doc = "An option.\n\nThis is a property with a subject, also known as a triple or statement.\n\nThis struct is useful anywhere a statement needs to be passed where no\nmemory ownership issues are present (since the value is a const pointer).\n\nOptions can be passed to an instance via the feature LV2_OPTIONS__options\nwith data pointed to an array of options terminated by a zeroed option, or\naccessed/manipulated using LV2_Options_Interface."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Options_Option {
    #[doc = "< Context (type of subject)."]
    pub context: LV2_Options_Context,
    #[doc = "< Subject."]
    pub subject: u32,
    #[doc = "< Key (property)."]
    pub key: LV2_URID,
    #[doc = "< Size of value in bytes."]
    pub size: u32,
    #[doc = "< Type of value (datatype)."]
    pub type_: LV2_URID,
    #[doc = "< Pointer to value (object)."]
    pub value: *const ::std::os::raw::c_void,
}
#[doc = "< Completed successfully."]
pub const LV2_Options_Status_LV2_OPTIONS_SUCCESS: LV2_Options_Status = 0;
#[doc = "< Unknown error."]
pub const LV2_Options_Status_LV2_OPTIONS_ERR_UNKNOWN: LV2_Options_Status = 1;
#[doc = "< Invalid/unsupported subject."]
pub const LV2_Options_Status_LV2_OPTIONS_ERR_BAD_SUBJECT: LV2_Options_Status = 2;
#[doc = "< Invalid/unsupported key."]
pub const LV2_Options_Status_LV2_OPTIONS_ERR_BAD_KEY: LV2_Options_Status = 4;
#[doc = "< Invalid/unsupported value."]
pub const LV2_Options_Status_LV2_OPTIONS_ERR_BAD_VALUE: LV2_Options_Status = 8;
#[doc = " A status code for option functions."]
pub type LV2_Options_Status = ::std::os::raw::c_uint;
#[doc = "Interface for dynamically setting options (LV2_OPTIONS__interface)."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Options_Interface {
    #[doc = "Get the given options.\n\nEach element of the passed options array MUST have type, subject, and\nkey set.  All other fields (size, type, value) MUST be initialised to\nzero, and are set to the option value if such an option is found.\n\nThis function is in the \"instantiation\" LV2 threading class, so no other\ninstance functions may be called concurrently.\n\n@return Bitwise OR of LV2_Options_Status values."]
    pub get: ::std::option::Option<
        unsafe extern "C" fn(instance: LV2_Handle, options: *mut LV2_Options_Option) -> u32,
    >,
    #[doc = "Set the given options.\n\nThis function is in the \"instantiation\" LV2 threading class, so no other\ninstance functions may be called concurrently.\n\n@return Bitwise OR of LV2_Options_Status values."]
    pub set: ::std::option::Option<
        unsafe extern "C" fn(instance: LV2_Handle, options: *const LV2_Options_Option) -> u32,
    >,
}
#[doc = "< Completed successfully."]
pub const LV2_Resize_Port_Status_LV2_RESIZE_PORT_SUCCESS: LV2_Resize_Port_Status = 0;
#[doc = "< Unknown error."]
pub const LV2_Resize_Port_Status_LV2_RESIZE_PORT_ERR_UNKNOWN: LV2_Resize_Port_Status = 1;
#[doc = "< Insufficient space."]
pub const LV2_Resize_Port_Status_LV2_RESIZE_PORT_ERR_NO_SPACE: LV2_Resize_Port_Status = 2;
#[doc = " A status code for state functions."]
pub type LV2_Resize_Port_Status = ::std::os::raw::c_uint;
#[doc = " Opaque data for resize method."]
pub type LV2_Resize_Port_Feature_Data = *mut ::std::os::raw::c_void;
#[doc = " Host feature to allow plugins to resize their port buffers."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Resize_Port_Resize {
    #[doc = " Opaque data for resize method."]
    pub data: LV2_Resize_Port_Feature_Data,
    #[doc = "Resize a port buffer to at least `size` bytes.\n\nThis function MAY return an error, in which case the port buffer was not\nresized and the port is still connected to the same location.  Plugins\nMUST gracefully handle this situation.\n\nThis function is in the audio threading class.\n\nThe host MUST preserve the contents of the port buffer when resizing.\n\nPlugins MAY resize a port many times in a single run callback.  Hosts\nSHOULD make this as inexpensive as possible."]
    pub resize: ::std::option::Option<
        unsafe extern "C" fn(
            data: LV2_Resize_Port_Feature_Data,
            index: u32,
            size: usize,
        ) -> LV2_Resize_Port_Status,
    >,
}
pub type LV2_State_Handle = *mut ::std::os::raw::c_void;
pub type LV2_State_Free_Path_Handle = *mut ::std::os::raw::c_void;
pub type LV2_State_Map_Path_Handle = *mut ::std::os::raw::c_void;
pub type LV2_State_Make_Path_Handle = *mut ::std::os::raw::c_void;
impl LV2_State_Flags {
    #[doc = "Plain Old Data.\n\nValues with this flag contain no pointers or references to other areas\nof memory.  It is safe to copy POD values with a simple memcpy and store\nthem for the duration of the process.  A POD value is not necessarily\nsafe to trasmit between processes or machines (for example, filenames\nare POD), see LV2_STATE_IS_PORTABLE for details.\n\nImplementations MUST NOT attempt to copy or serialise a non-POD value if\nthey do not understand its type (and thus know how to correctly do so)."]
    pub const LV2_STATE_IS_POD: LV2_State_Flags = LV2_State_Flags(1);
    #[doc = "Portable (architecture independent) data.\n\nValues with this flag are in a format that is usable on any\narchitecture.  A portable value saved on one machine can be restored on\nanother machine regardless of architecture.  The format of portable\nvalues MUST NOT depend on architecture-specific properties like\nendianness or alignment.  Portable values MUST NOT contain filenames."]
    pub const LV2_STATE_IS_PORTABLE: LV2_State_Flags = LV2_State_Flags(2);
    #[doc = "Native data.\n\nThis flag is used by the host to indicate that the saved data is only\ngoing to be used locally in the currently running process (for things\nlike instance duplication or snapshots), so the plugin should use the\nmost efficient representation possible and not worry about serialisation\nand portability."]
    pub const LV2_STATE_IS_NATIVE: LV2_State_Flags = LV2_State_Flags(4);
}
